# chrislyn-email-sender

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  request.sh
app/.cargo/: config.toml
app/src/: routes_static.rs
email-sender/: Dockerfile
email-sender/app/src/email/: mod.rs
my-worker/: Cargo.toml
my-worker/.cargo/: config.toml
my-worker/src/: error.rs  lib.rs  main.rs
my-worker/src/email/: mod.rs  template.rs
my-worker/web-folder/: index.html
my_worker/: Cargo.toml
my_worker/.cargo/: config.toml
my_worker/src/: config.rs  lib.rs  main.rs  routes_static.rs
my_worker/src/email/: config.rs  email_handler.rs  error.rs  template.rs  worker.rs
src/: config.rs  lib.rs  main.rs
src/email/: email_handler.rs  template.rs  worker.rs
