[package]
name = "my_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_with = {version = "3", features = ["time_0_3"] }
derive_more = { version = "1", features = ["from", "display"] }
serde = { version = "1", features = ["derive"]} 
serde_json = "1"
strum_macros = "0.26"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4","fast-rng"] }
mail-send = "0.4"

# --- time
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
time-tz = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
